[package]
name = "mapsco-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kakserpom/mapsco-client-rs"
[dependencies]
anyhow = {optional = true, version = "1.0.86" }
reqwest = {optional = true, version = "0.12.4"}
serde = "1.0.203"
serde_json = "1.0.117"
[features]
reqwest = ["dep:reqwest", "dep:anyhow"]
